# swing_daily

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: gen_data.py
tests/: conftest.py  test_fn.py  test_gendata.py
