[project]
name = "swing-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "strat-backtest",
]

[tool.uv.sources]
strat-backtest = { path = "../strat_backtest", editable = true }


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name", 
    "len-as-condition",
    "fixme",
    "too-few-public-methods",
    "unnecessary-ellipsis",
]

[tool.pylint.DESIGN]
max-attributes = 20
max-args = 8
max-positional-arguments = 8

[tool.pylint.FORMAT]
max-line-length = 88  # Match Black's default

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "black",
]
